# Curve_Face

./: CMakeLists.txt  CMamelPresets.json  README.md
assets/shaders/: Base.frag  Base.vert
sources/: CMakeLists.txt
sources/include/: MainWindow.h  OglWidget.hpp  Renderer.hpp  RendererMode.hpp
sources/include/Core/: Shader.hpp
sources/include/Math/: BSPlineCurve.hpp  BezierCurve.hpp
sources/include/Render/: BezierCurveRenderer.h  IRenderer.hpp  LineRenderer.hpp  PointRenderer.hpp  Renderer.hpp  SurfaceRenderer.hpp
sources/src/: MainWindow.cpp  OglWidget.cpp  Renderer.cpp  main.cpp
sources/src/Core/: Shader.cpp
sources/src/Math/: BSplineCurve.cpp  BezierCurve.cpp
sources/src/Render/: BezierCurveRenderer.cpp  LineRenderer.cpp  PointRenderer.cpp  Renderer.cpp  SurfaceRenderer.cpp
